force-app/main/default/objects/Financial__c/fields/InitiationDate__c.field-meta.xml
<CustomField>
    <fullName>InitiationDate__c</fullName>
    <description>Initiation Date of the Financial Transaction of the Property.</description>
    <label>InitiationDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>