force-app/main/default/objects/Financial__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Member Id of the property owner.</description>
    <label>MemberId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>