force-app/main/default/objects/Financial__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Refer to the Property</description>
    <label>Property</label>
    <referenceTo>hm_Property__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>