force-app/main/default/objects/Financial__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of Financial Transaction of Property</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ontime</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>