force-app/main/default/objects/Financial__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <description>Transaction Date of the Financial Transaction of the property.</description>
    <label>TransactionDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>